# kealu-benefits-navigator

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  LICENSE  README.md  pyproject.toml
contexts/: INDEX.md
contexts/community/: INDEX.md  benefit-navigator.md
personas/: INDEX.md
personas/community/: action-planner.md  benefits-researcher.md  eligibility-analyst.md  evidence-verifier.md  insurance-analyst.md
src/benefit_navigator/: __main__.py  form_filler.py  marketplace_api.py  mcp_server.py  pdf_generator.py
src/benefits_navigator/: __init__.py  __main__.py  form_filler.py  mcp_server.py  pdf_generator.py
tests/: conftest.py
tests/features/: application_draft.feature  form_filler.feature  intake_flow.feature  marketplace_api.feature  marketplace_api_integration.feature  mcp_protocol.feature  phase_streaming.feature  tool_routing.feature  workflow_output.feature
tests/step_defs/: test_application_draft.py  test_form_filler.py  test_intake_flow.py  test_marketplace_api.py  test_marketplace_api_integration.py  test_mcp_protocol.py  test_phase_streaming.py  test_tool_routing.py  test_workflow_output.py
workflows/: benefit-navigator.yaml  benefits-navigator.yaml
