[project]
name = "kealu-benefits-navigator"
version = "0.1.0"
description = "Benefit & Insurance Navigator — multi-agent system that discovers government benefits and insurance plans, validates eligibility, and produces enrollment action plans"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
forms = [
    "pypdf>=4.0",
]
dev = [
    "pypdf>=4.0",
    "pytest>=8.0",
    "pytest-bdd>=7.0",
]

[project.scripts]
benefits-navigator = "benefits_navigator.mcp_server:main"

[tool.pytest.ini_options]
markers = [
    "integration: live CMS Marketplace API tests (require CMS_API_KEY)",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
